--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run fullStack:serve-ssr",
+    "serve:ssr": "node dist/fullStack/server/main.js",
+    "build:ssr": "ng build --prod && ng run fullStack:server:production",
+    "prerender": "ng run fullStack:prerender",
+    "prebuild:ssr": "ngcc"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +23,17 @@
     "@angular/forms": "~9.1.1",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
+    "@angular/platform-server": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@nestjs/common": "^6.0.0",
+    "@nestjs/core": "^6.0.0",
+    "@nestjs/ng-universal": "^3.1.0",
+    "@nestjs/platform-express": "^6.0.0",
+    "@nguniversal/express-engine": "^9.0.2",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.9.1",
+    "express": "^4.15.2",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -28,6 +43,8 @@
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
+    "@nguniversal/builders": "^9.0.2",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
