--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@angular/router": "~9.1.1",
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/mongoose": "^6.4.0",
     "@nestjs/ng-universal": "^3.1.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nguniversal/express-engine": "^9.0.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "express": "^4.15.2",
+    "mongoose": "^5.9.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -45,9 +47,10 @@
     "@angular/language-service": "~9.1.1",
     "@nguniversal/builders": "^9.0.2",
     "@types/express": "^4.17.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/mongoose": "^5.7.14",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
