--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "@nestjs/ng-universal": "^3.1.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nguniversal/express-engine": "^9.0.2",
+    "@popperjs/core": "^2.4.0",
+    "bootstrap": "^4.4.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "express": "^4.15.2",
+    "jquery": "^3.5.0",
     "mongoose": "^5.9.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.4",
