--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
     "baseUrl": "./",
     "paths": {
       "@server/*": ["server/*"],
-      "@todosAPI/*": ["server/todos/*"]
+      "@todosAPI/*": ["server/todos/*"],
+      "@app/*": ["src/app/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@environments/*": ["src/environments/*"]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
